compiler/fir/analysis-tests/testData/resolve/problems/classLiteralWithExclExcl.kt
// ISSUE: KT-47373

class B<T>
val any2 = <!UNRESOLVED_REFERENCE!><!NO_COMPANION_OBJECT, WRONG_NUMBER_OF_TYPE_ARGUMENTS!>B<!>!!<!><<!UNRESOLVED_REFERENCE!>T<!>>::class
